--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,10 +6,10 @@
   },
   "browser_action": {
     "default_popup": "popup.html",
-    "default_icon": "icon-34.png"
+    "default_icon": "logo.png"
   },
   "icons": {
-    "128": "icon-128.png"
+    "128": "logo.png"
   },
   "manifest_version": 2,
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
