--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "start": "node utils/webserver.js"
   },
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "16.12.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.7.4",
