--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-react": "7.7.4",
     "babel-loader": "8.0.6",
     "clean-webpack-plugin": "3.0.0",
@@ -26,7 +27,7 @@
     "html-webpack-plugin": "3.2.0",
     "react-hot-loader": "4.12.18",
     "style-loader": "1.0.0",
-    "webpack": "4.41.2",
+    "webpack": "^4.41.2",
     "webpack-cli": "3.3.10",
     "webpack-dev-server": "^3.11.0",
     "write-file-webpack-plugin": "4.5.1"
