--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Price Tracker",
+  "name": "Smart Track",
   "version": "0.0.1",
   "description": "A chrome extension to track ecommerce product prices",
   "permissions": ["activeTab", "declarativeContent", "storage", "tabs", "<all_urls>"],
@@ -12,7 +12,9 @@
     "default_icon": "logo.png"
   },
   "icons": {
-    "128": "logo.png"
+    "16": "icon-16.png",
+    "38": "icon-38.png",
+    "128": "icon-128.png"
   },
   "content_scripts": [
     {
