--- a/src/manifest.json
+++ b/src/manifest.json
@@ -9,7 +9,7 @@
   },
   "browser_action": {
     "default_popup": "popup.html",
-    "default_icon": "logo.png"
+    "default_icon": "header_logo.png"
   },
   "icons": {
     "16": "icon-16.png",
