--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,12 @@
   "name": "Price Tracker",
   "version": "0.0.1",
   "description": "A chrome extension to track ecommerce product prices",
-  "permissions": ["activeTab", "declarativeContent", "storage"],
+  "permissions": [
+    "activeTab", 
+    "declarativeContent", 
+    "storage",
+    "https://*/*"
+  ],
   "options_page": "options.html",
   "background": {
     "page": "background.html"
