--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "16.12.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "16.12.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "string-hash": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "7.7.4",
