--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "bootstrap": "^4.5.3",
     "firebase": "^8.0.2",
     "jssoup": "0.0.12",
+    "plotly.js": "^1.58.0",
     "react": "16.12.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "16.12.0",
+    "react-plotly.js": "^2.5.1",
     "react-router-dom": "^5.2.0",
+    "react-stockcharts": "^0.7.8",
     "string-hash": "^1.1.3",
     "uuid": "^8.3.1"
   },
