--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "16.12.0",
     "react-plotly.js": "^2.5.1",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-stockcharts": "^0.7.8",
     "string-hash": "^1.1.3",
