--- a/src/manifest.json
+++ b/src/manifest.json
@@ -26,7 +26,8 @@
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*"],
-      "js": ["contentScript.bundle.js"]
+      "js": ["contentScript.bundle.js"],
+      "css": ["hover.css"]
     }
   ],
   "manifest_version": 2,
