--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "A chrome extension to track ecommerce product prices",
   "permissions": [
+    "alarms",
     "activeTab", 
     "declarativeContent", 
     "storage",
