--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -34,6 +34,7 @@ pyOpenSSL==20.0.1
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 pytz==2020.4
+random-user-agent==1.0.1
 requests==2.25.0
 rope==0.18.0
 rsa==4.6
