--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ cachetools==4.1.1
 certifi==2020.12.5
 cffi==1.14.4
 chardet==3.0.4
+colorama==0.4.4
 cryptography==3.3.1
 fake-useragent==0.1.11
 firebase-admin==4.4.0
