--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -32,6 +32,7 @@ pyasn1-modules==0.2.8
 pycodestyle==2.6.0
 pycparser==2.20
 pyOpenSSL==20.0.1
+python-crontab==2.5.1
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 pytz==2020.4
