--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,5 @@
 GOOGLE_APPLICATION_CREDENTIALS="your\path\firebase_credentials.json"
 LOG_FILE="your\path\pt-scraper\logs\"
 WEBDRIVER="your\path\pt-scraper\geckodriver-v0.26.0-win64\geckodriver.exe"
+SENDER_PWD="smart track email account password"
+CONFIRMATION_EMAIL="email to send the daily confirmation to"
